@@ -1,3 +1,6 @@
+24 October 2019: Wouter
+	- Fix #99: Memory leak in ub_ctx (event_base will never be freed).
+
 23 October 2019: George
 	- Add new configure option `--enable-fully-static` to enable full static
 	  build if requested; in relation to #91.
